--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API='https://indonesia-public-static-api.vercel.app/api/volcanoes'
+REACT_APP_API=https://indonesia-public-static-api.vercel.app/api/volcanoes
